Tue Aug  1 17:07:10 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add explicit std:: to things in sleepycat backend, so that it will
	  compile with stricter compilers.  Convert some DebugMsgs with endls
	  into DEBUGLINEs.

Tue Aug  1 16:08:04 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* stemtest and delve now compile under Solaris CC.

Tue Aug  1 15:41:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add autoconf support for compiling with STLport.

Tue Aug  1 15:39:50 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change C++ style comments in acconfig.h into C style comments.

Mon Jul 31 19:05:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Updates to the Perl and Python test scripts, and an extra
	  Makefile dependency.

Mon Jul 31 15:41:37 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixes and updates to the SWIG bindings.  Perl5 has done its
	  first actual query (using an inmemory database).

Fri Jul 21 14:37:01 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* A couple of tweaks for Solaris.

Fri Jul 21 12:26:20 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed a reported memory leak in apitest on Solaris

	* Extra debugging facilities for finding memory allocation problems
	  in testsuite programs.
	  If OM_NEW_TRAP is set in the environment with a hex value, then
	  global operator new() will abort() when that address is allocated.
	  If OM_NEW_TRAP_COUNT is set to a number n, then only abort on the
	  nth allocation returning the above address.

Thu Jul 20 19:08:53 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Progress on the apitest-to-Java script and support stuff.  A
	  few helper functions need adding, but about half of the test
	  functions translate ok.

Thu Jul 20 16:39:00 BST 2000 Olly Betts

	* Tweaks to doxygen makefile stuff.

Thu Jul 20 15:56:13 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
