@@ -79,7 +79,7 @@ PostList * DAPostList::skip_to(om_docid did, om_weight w_min)
     if (currdoc && did <= om_docid(postlist->E)) {
 	// skip_to later in the current range
 	currdoc = did;
-	DEBUGMSG(DB, "Skip within range " << did << endl);
+	DEBUGLINE(DB, "Skip within range " << did);
 	return NULL;
     }
     //printf("%p:From %d skip_to ", this, currdoc);
@@ -345,22 +345,22 @@ DADatabase::get_key(om_docid did, om_keyno keyid) const
     OmLockSentry sentry(mutex);
 
     OmKey key;
-    DEBUGMSG(DB, "Looking in keyfile for keyno " << keyid << " in document " << did);
+    DEBUGLINE(DB, "Looking in keyfile for keyno " << keyid << " in document " << did);
 
     if (keyfile == 0) {
-	DEBUGMSG(DB, ": don't have keyfile - using record" << endl);
+	DEBUGLINE(DB, ": don't have keyfile - using record");
     } else {
 	int seekok = fseek(keyfile, (long)did * 8, SEEK_SET);
 	if(seekok == -1) {
-	    DEBUGMSG(DB, ": seek off end of keyfile - using record" << endl);
+	    DEBUGLINE(DB, ": seek off end of keyfile - using record");
 	} else {
 	    char input[9];
 	    size_t bytes_read = fread(input, sizeof(char), 8, keyfile);
 	    if(bytes_read < 8) {
-		DEBUGMSG(DB, ": read off end of keyfile - using record" << endl);
+		DEBUGLINE(DB, ": read off end of keyfile - using record");
 	    } else {
 		key.value = std::string(input, 8);
-		DEBUGMSG(DB, ": found - value is `" << key.value << "'" << endl);
+		DEBUGLINE(DB, ": found - value is `" << key.value << "'");
 	    }
 	}
     }
@@ -397,22 +397,22 @@ DADatabase::term_lookup(const om_termname & tname) const
 	free(k);
 
 	if(found == 0) {
-	    DEBUGMSG(DB, "Not in collection" << endl);
+	    DEBUGLINE(DB, "Not in collection");
 	} else {
 	    // FIXME: be a bit nicer on the cache than this
 	    if(termmap.size() > 500) {
-		DEBUGMSG(DB, "cache full, wiping");
+		DEBUGLINE(DB, "cache full, wiping");
 		termmap.clear();
 	    }
 
-	    DEBUGMSG(DB, "found, adding to cache" << endl);
+	    DEBUGLINE(DB, "found, adding to cache");
 	    std::pair<om_termname, OmRefCntPtr<const DATerm> > termpair(tname, new DATerm(&ti, tname));
 	    termmap.insert(termpair);
 	    the_term = termmap.find(tname)->second;
 	}
     } else {
 	the_term = (*p).second;
-	DEBUGMSG(DB, "found in cache" << endl);
+	DEBUGLINE(DB, "found in cache");
     }
     return the_term;
 }
